# rust-magic-string

./: .gitignore  .prettierrc.cjs  Cargo.toml  README.md  benchmark.js  index.d.ts  index.js  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  z.js
__tests__/: MagicString.spec.mjs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  locator.rs  utils.rs
crates/node_bindings/: Cargo.toml  index.d.ts  index.js  package.json
crates/node_bindings/npm/android-arm-eabi/: README.md  package.json
crates/node_bindings/npm/android-arm64/: README.md  package.json
crates/node_bindings/npm/darwin-arm64/: README.md  package.json
crates/node_bindings/npm/darwin-universal/: README.md  package.json
crates/node_bindings/npm/darwin-x64/: README.md  package.json
crates/node_bindings/npm/freebsd-x64/: README.md  package.json
crates/node_bindings/npm/linux-arm-gnueabihf/: README.md  package.json
crates/node_bindings/npm/linux-arm-musleabihf/: README.md  package.json
crates/node_bindings/npm/linux-arm64-gnu/: README.md  package.json
crates/node_bindings/npm/linux-arm64-musl/: README.md  package.json
crates/node_bindings/npm/linux-riscv64-gnu/: README.md  package.json
crates/node_bindings/npm/linux-x64-gnu/: README.md  package.json
crates/node_bindings/npm/linux-x64-musl/: README.md  package.json
crates/node_bindings/npm/win32-arm64-msvc/: README.md  package.json
crates/node_bindings/npm/win32-ia32-msvc/: README.md  package.json
crates/node_bindings/npm/win32-x64-msvc/: README.md  package.json
crates/node_bindings/src/: error.rs  lib.rs  types.rs
crates/sourcemap/: Cargo.toml
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  (+1 more)
src/: error.rs  lib.rs  locator.rs  magic_string.rs  reg.rs  utils.rs
(+24 files in other folders)
