[package]
edition = "2021"
name = "rust-magic-string"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
regex = "1.10.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
