[package]
name = "fast_magic_string"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1.10.6"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
fast_magic_string_sourcemap = { path = "../sourcemap" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
